Fixed some mac linux inconsistencies

--- a/notebooks/04-xgb-jax-torch.ipynb
+++ b/notebooks/04-xgb-jax-torch.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "# Hyperparameters\n",
     "n_samples = 10000\n",
-    "hiddens = [64,64,64]\n",
+    "hiddens = [64, 64, 64]\n",
     "batch_size = 20\n",
     "epochs = 20\n",
     "learning_rate = 0.005"
@@ -258,6 +258,8 @@
    "outputs": [],
    "source": [
     "# Monitor model\n",
+    "\n",
+    "\n",
     "@train_epoch_completed.connect_via(model_jax)\n",
     "def monitor_model(_, epoch, loss, elapsed, **__):\n",
     "    if capture_metrics:\n",
@@ -265,7 +267,7 @@
     "        print(f\"epoch={epoch}, loss={loss:0.3f}, elapsed={elapsed:0.3f}\")\n",
     "    else:\n",
     "        loss_hx.append(loss)\n",
-    "        xjax.plots.loss_history(loss_hx, elapsed=elapsed)        "
+    "        xjax.plots.loss_history(loss_hx, elapsed=elapsed)"
    ]
   },
   {
@@ -353,6 +355,8 @@
    "outputs": [],
    "source": [
     "# Monitor model\n",
+    "\n",
+    "\n",
     "@train_epoch_completed.connect_via(model_torch)\n",
     "def monitor_model(_, epoch, loss, elapsed, **__):\n",
     "    loss = loss.detach().cpu().numpy()\n",
